Edit config/database.yml with aws rds info for instance aa1m1jm4m3fmal6

--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,10 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: blog_production
-  username: blog
-  password: <%= ENV['BLOG_DATABASE_PASSWORD'] %>
+  adapter: mysql2
+  encoding: utf8
+  database: ebdb 
+  username: ebroot
+  password: blahapppw
+  host: aa1m1jm4m3fmal6.cfmmloazrvwv.us-west-1.rds.amazonaws.com
+  port: 3306 
